--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -1166,6 +1166,7 @@ body
         .price
             margin-left: 10px
         .old
+            font-weight: normal
             @include inline-block()
             opacity: .5
             position: relative
